[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
scraper = "0.19.0"
teloxide = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }


