[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
reqwest = {version = "0.12.4", features = ["json", "blocking"] }
scraper = "0.19.0"
serde_json = "1.0.116"
teloxide = {version = "0.12.2", features = ["full"]}
teloxide-core = "0.9.1"
tokio = { version = "1.37.0", features = ["full"] }
actix-web = "4"
futures = "0.3.30"


